fix(server): fix video cropping issues Video poster will have black bars, related to (#178)

--- a/source/Tubeshade.Server/wwwroot/css/site.css
+++ b/source/Tubeshade.Server/wwwroot/css/site.css
@@ -16,10 +16,6 @@ video {
     max-height: 80vh;
 }
 
-video[poster] {
-    object-fit: cover;
-}
-
 .tubeshade-video-thumbnail {
     aspect-ratio: 16 / 9;
     object-fit: cover;
